--- a/app/styles/components/_pushy.scss
+++ b/app/styles/components/_pushy.scss
@@ -24,27 +24,15 @@
 /* Menu Movement */
 
 .pushy-left{
-    -webkit-transform: translate3d(-270px,0,0);
-    -moz-transform: translate3d(-270px,0,0);
-    -ms-transform: translate3d(-270px,0,0);
-    -o-transform: translate3d(-270px,0,0);
-    transform: translate3d(-270px,0,0);
+  @include transform(translate3d(-270px,0,0));
 }
 
 .pushy-open{
-    -webkit-transform: translate3d(0,0,0);
-    -moz-transform: translate3d(0,0,0);
-    -ms-transform: translate3d(0,0,0);
-    -o-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0);
+  @include transform(translate3d(0,0,0));
 }
 
 .container-push, .push-push{
-    -webkit-transform: translate3d(270px,0,0);
-    -moz-transform: translate3d(270px,0,0);
-    -ms-transform: translate3d(270px,0,0);
-    -o-transform: translate3d(270px,0,0);
-    transform: translate3d(270px,0,0);
+  @include transform(translate3d(270px,0,0));
 }
 
 
@@ -72,11 +60,7 @@
     left: 0;
     z-index: 9998;
     // background-color: rgba(0,0,0,0.5);
-    -webkit-animation: fade 500ms;
-    -moz-animation: fade 500ms;
-    -ms-animation: fade 500ms;
-    -o-animation: fade 500ms;
-    animation: fade 500ms;
+    @include animation(fade 500ms);
 }
 
 @include keyframes(fade) {
@@ -86,13 +70,4 @@
   to {
     @include transform(scale(1));
   }
-}
-
-
-/* Example Media Query */
-
-@media screen and (max-width: 768px){
-    .pushy{
-        font-size: 1.0em;
-    }
 }
