Base of all the sections

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -91,3 +91,12 @@ cite {
     content: "\2014 \00A0";
   }
 }
+
+h2.section-title {
+  text-align: center;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #2c3e50;
+  letter-spacing: 4px;
+  margin: 0 0 20px 0;
+}
