--- a/app/styles/sections/_for_whom.scss
+++ b/app/styles/sections/_for_whom.scss
@@ -17,6 +17,39 @@
 }
 
 
+.for-whom-list {
+  margin-top: 95px;
+  margin-bottom: 50px;
+  @include row();
+  li {
+    width: 20%;
+    float: left;
+    @include media($mobile) {
+      @include span-columns(4);
+    }
+    .persona {
+      text-align: center;
+      display: block;
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 45px;
+      text-transform: uppercase;
+    }
+    .description {
+      text-align: center;
+      font-size: 14px;
+      line-height: 16px;
+    }
+    img {
+      margin-bottom: 34px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
+
+
 
 
 
