--- a/app/styles/sections/_speakers.scss
+++ b/app/styles/sections/_speakers.scss
@@ -43,8 +43,9 @@
     .speaker-profile-informations {
       width: 50%;
       float: left;
-      padding: 20px;
+      padding: 15px;
       color: #fff;
+      position: relative;
       @include media($mobile) {
         @include span-columns(4);
       }
@@ -66,6 +67,38 @@
         line-height: 14px;
         display: block;
         padding-top: 6px;
+      }
+
+      .social-links {
+        position: absolute;
+        top: 180px;
+        left: 15px;
+        li {
+          width: 43px;
+          height: 43px;
+          float: left;
+          background: #1abc9c;
+          margin-right: 4px;
+          a {
+            text-indent: -9000px;
+            display: block;
+            height: 100%;
+            width: 100%;
+          }
+          &.keynote {
+            background: #f2c600 url('../images/icon-social-micro-slideshare.png') center no-repeat;
+            width: 102px;
+          }
+          &.twitter {
+            background: #1abc9c url('../images/icon-social-micro-twitter.png') no-repeat center;
+          }
+          &.facebook {
+            background: #1abc9c url('../images/icon-social-micro-facebook.png') no-repeat center;
+          }
+          &.linkedin {
+            background: #1abc9c url('../images/icon-social-micro-linkedin.png') no-repeat center;
+          }
+        }
       }
     }
 
