--- a/app/styles/sections/_ovini.scss
+++ b/app/styles/sections/_ovini.scss
@@ -1,13 +1,23 @@
 
+#pixie {
+  width: 100%;
+  height: 100%;
+  background: #0b1025;
+  position: absolute;
+  z-index: 2;
+}
+
+
 .header-ovini {
   height: 850px;
-  background: #0b1025 url('../images/stars-header.jpg') top repeat-x;
+  background: #0b1025;
   position: relative;
   overflow: hidden;
   .rockets {
     position: absolute;
     right: 450px;
     top: 840px;
+    z-index: 200;
   }
 }
 .cloud-wrapper {
@@ -17,17 +27,20 @@
   width: 100%;
   bottom: 0;
   left: 0;
+  z-index: 300;
 }
 .ovini-animation {
   width: 820px;
   position: relative;
   margin: 0 auto;
+  z-index: 200;
 }
 .register-header {
   position: absolute;
   top: 130px;
   left: 500px;
   opacity: 0;
+  z-index: 200;
 }
 .add-logo {
   position: absolute;
@@ -36,6 +49,7 @@
   margin-left: -26px;
   width: 54px;
   opacity: 0;
+  z-index: 200;
 }
 .ovini {
   background: url('../images/ovini-without-light.png');
@@ -45,6 +59,7 @@
   top: 124px;
   left: 50%;
   margin-left: -135px;
+  z-index: 200;
   .light {
     background: url('../images/ovini-light.png');
     width: 682px;
