--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,7 @@
 @import "sections/organizers";
 @import "sections/register";
 @import "sections/schedule";
+@import "sections/lightningtalks";
 @import "sections/speakers";
 @import "sections/sponsors";
 @import "sections/workshop";
