--- a/app/styles/sections/_schedule.scss
+++ b/app/styles/sections/_schedule.scss
@@ -44,7 +44,6 @@
 
 
 
-
 .cd-timeline-block {
   width: calc(50% + 1px);
   float: right;
@@ -279,3 +278,46 @@
 
 
 
+
+
+
+.cd-timeline-img.is-hidden {
+  visibility: hidden;
+}
+.cd-timeline-img.bounce-in {
+  visibility: visible;
+  animation: cd-bounce-1 0.6s;
+}
+
+.cd-timeline-content.is-hidden {
+  visibility: hidden;
+}
+.cd-timeline-content.bounce-in {
+  visibility: visible;
+  animation: cd-bounce-1 0.6s;
+}
+
+.cd-timeline-time.is-hidden {
+  visibility: hidden;
+}
+.cd-timeline-time.bounce-in {
+  visibility: visible;
+  animation: cd-bounce-1 0.6s;
+}
+
+
+@keyframes cd-bounce-1 {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+
+  60% {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
