--- a/app/styles/components/_menu.scss
+++ b/app/styles/components/_menu.scss
@@ -47,6 +47,9 @@
       padding: 0;
       margin: 0 0 0 1px;
       &.twitter {
+        &:hover {
+          background: #00acee;
+        }
         a {
           display: block;
           height: 100%;
@@ -55,6 +58,9 @@
         }
       }
       &.facebook {
+        &:hover {
+          background: #3c5c9e;
+        }
         a {
           display: block;
           height: 100%;
