--- a/app/styles/sections/_speakers.scss
+++ b/app/styles/sections/_speakers.scss
@@ -16,7 +16,7 @@
     @include span-columns(6);
     background: #172838;
     @include omega(2n);
-    width: 50%;
+    width: calc(50%-1px);
 
     @include media($mobile) {
       @include span-columns(4);
@@ -45,7 +45,7 @@
     .speaker-profile-informations {
       width: 50%;
       float: left;
-      padding: 15px;
+      padding: 12px;
       color: #fff;
       position: relative;
       @include media($mobile) {
@@ -74,7 +74,7 @@
       .social-links {
         position: absolute;
         top: 180px;
-        left: 15px;
+        left: 12px;
         li {
           width: 43px;
           height: 43px;
@@ -114,6 +114,6 @@
 
   }
   .speaker-item:nth-child(1n) {
-    margin: 0;
+    margin: 0 1px 1px 0;
   }
 }
