--- a/app/styles/sections/_lightningtalks.scss
+++ b/app/styles/sections/_lightningtalks.scss
@@ -1,7 +1,6 @@
 .lightningtalks {
   background: #0c1123 url('../images/stars-section.jpg') center top;
-  color: #fff;
-  // padding-top: 290px;
+  color: $white;
   padding-bottom: 90px;
   position: relative;
   .bottom-cloud {
@@ -19,10 +18,8 @@
 
 .moon-wrapper {
   position: relative;
-  // background: red;
   .moon-content {
     @include outer-container;
-    // background: red;
     padding: 326px 0 0 0;
     position: relative;
     z-index: 400;
@@ -34,7 +31,6 @@
     top: 0;
     left: 50%;
     margin-left: em(-544);
-    // background: green;
     padding: 122px 0;
   }
   .moon {
@@ -82,8 +78,8 @@
 }
 
 .lt-list {
-  padding: 0 0 0 0;
-  margin: 0 0 0 0;
+  padding: 0;
+  margin: 0;
   li {
     @include span-columns(4);
     @include omega(3n);
@@ -126,7 +122,7 @@
       line-height: 65px;
       text-align: center;
       a {
-        color: #fff;
+        color: $white;
         text-transform: uppercase;
         font-size: 16px;
         font-weight: bold;
@@ -136,7 +132,7 @@
       .label {
         left: 2%;
         background: url('../images/label-confirmed.png') no-repeat;
-        color: #ffffff;
+        color: $white;
         font-size: 16px;
         font-weight: bold;
         text-transform: uppercase;
