created modular css for social list

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@
 @import "base/base";
 @import "components/pushy";
 @import "components/menu";
+@import "components/social_links";
 
 // Sections
 @import "sections/ovini";
