--- a/app/styles/sections/_lightningtalks.scss
+++ b/app/styles/sections/_lightningtalks.scss
@@ -26,10 +26,12 @@
   .moon-overlay-bg {
     min-width: em(960);
     position: absolute;
-    top: 0;
-    left: 50%;
-    margin-left: em(-480);
+    top: 8px;
+    // left: 50%;
+    // margin-left: em(-480);
     padding: 122px 0;
+    width: 100%;
+
   }
   .moon {
     min-height: 1616px;
@@ -43,7 +45,7 @@
     width: 383px;
     height: 382px;
     position: absolute;
-    right: -200px;
+    right: 0;
     top: 0;
     z-index: 90;
   }
