Add background fixed for organizers and schedules

--- a/app/styles/sections/_organizers.scss
+++ b/app/styles/sections/_organizers.scss
@@ -2,7 +2,7 @@
   @include outer-container;
 }
 .organizers {
-  background: #0c1123 url('../images/bg-organizers.jpg') center top no-repeat;
+  background: #0c1123 url('../images/bg-organizers.jpg') center top fixed no-repeat;
   padding-top: 283px;
   padding-bottom: 130px;
   position: relative;
