--- a/app/styles/sections/_schedule.scss
+++ b/app/styles/sections/_schedule.scss
@@ -2,7 +2,7 @@
   .section-title {
     color: #ffffff;
   }
-  background: #0c1123 url('../images/stars-section.jpg') center top;
+  background: #0c1123 url('../images/stars-section.jpg') center top fixed;
   padding-top: 290px;
   padding-bottom: 290px;
   position: relative;
