--- a/app/styles/sections/_lightningtalks.scss
+++ b/app/styles/sections/_lightningtalks.scss
@@ -26,11 +26,11 @@
   .moon-overlay-bg {
     min-width: em(960);
     position: absolute;
-    top: 8px;
-    // left: 50%;
-    // margin-left: em(-480);
+    top: -54px;
+    left: 50%;
+    margin-left: em(-480);
     padding: 122px 0;
-    width: 100%;
+    // width: 100%;
 
   }
   .moon {
@@ -45,7 +45,7 @@
     width: 383px;
     height: 382px;
     position: absolute;
-    right: 0;
+    right: -200px;
     top: 0;
     z-index: 90;
   }
@@ -95,7 +95,7 @@
       text-transform: uppercase;
     }
     p {
-      padding: 0 20px;
+      padding: 0 35px;
       font-size: 14px;
       line-height: 22px;
       text-align: center;
@@ -141,8 +141,9 @@
   }
 }
 .lt-obs {
-  @include span-columns(8);
-  @include shift(2);
+  @include span-columns(12);
   font-size: 13px;
-  padding-top: 96px;
+  padding-top: 0;
+  margin-top: 90px;
+  text-align: center;
 }
