--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -68,3 +68,13 @@ $form-box-shadow: inset 0 1px 3px rgba(black,0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
 $form-font-size: $base-font-size;
 $form-font-family: $base-font-family;
+
+
+@mixin btn-hover($normal,$hover){
+ background-color : $normal;
+ text-decoration: none;
+ transition: 300ms;
+    &:hover{
+      background-color : $hover;
+   }
+}
