--- a/app/styles/components/_menu.scss
+++ b/app/styles/components/_menu.scss
@@ -46,10 +46,9 @@
       background: $medium-green;
       padding: 0;
       margin: 0 0 0 1px;
+
       &.twitter {
-        &:hover {
-          background: #00acee;
-        }
+        @include btn-hover(#2c3e50,#00acee);
         a {
           display: block;
           height: 100%;
@@ -57,10 +56,9 @@
           background: url('../images/icon-social-twitter.png') no-repeat center;
         }
       }
+
       &.facebook {
-        &:hover {
-          background: #3c5c9e;
-        }
+        @include btn-hover(#2c3e50,#3c5c9e);
         a {
           display: block;
           height: 100%;
