--- a/app/styles/sections/_sponsors.scss
+++ b/app/styles/sections/_sponsors.scss
@@ -5,3 +5,37 @@
 .sponsors-wrapper {
   @include outer-container;
 }
+
+.sponsor-category {
+	@include span-columns(12);
+	// @include omega(5n);
+	// width: 100%;
+	// border-bottom: 2px solid $light-gray;
+	display: block;
+	height: auto;
+	margin-bottom: 20px;
+	// text-align: center;
+	padding: 30px 0;
+
+	h2 {
+		text-transform: uppercase;
+		font-size: 14px;
+		text-align: center;
+		color: $light-green;
+		// padding: 30px 0;
+		padding-bottom: 30px;
+	}
+
+	ul {
+		border-bottom: 2px solid $light-gray;
+		@include span-columns(4);
+		// @include omega(5n);
+		border-right: 1px solid $light-gray;
+		li {
+			position: relative;
+			float: left;
+			display: inline-block;
+		}
+	}
+
+}
