--- a/app/styles/sections/_sponsors.scss
+++ b/app/styles/sections/_sponsors.scss
@@ -2,19 +2,22 @@
   position: relative;
   z-index: 300;
 }
-.sponsors-wrapper {
+.sponsors-wrapper, 
+.partners-wrapper  {
   @include outer-container;
 }
 
 .sponsor-category {
-	@include span-columns(12);
+	@include span-columns(4);
 	// @include omega(5n);
 	// width: 100%;
-	// border-bottom: 2px solid $light-gray;
+	margin-right: 0;
+	width: 33.2%;
+	border-bottom: 2px solid rgba($light-gray, .5);
 	display: block;
 	height: auto;
 	margin-bottom: 20px;
-	// text-align: center;
+	text-align: center;
 	padding: 30px 0;
 
 	h2 {
@@ -22,19 +25,59 @@
 		font-size: 14px;
 		text-align: center;
 		color: $light-green;
-		// padding: 30px 0;
 		padding-bottom: 30px;
 	}
 
-	ul {
-		border-bottom: 2px solid $light-gray;
-		@include span-columns(4);
-		// @include omega(5n);
-		border-right: 1px solid $light-gray;
-		li {
-			position: relative;
-			float: left;
-			display: inline-block;
+	a {
+		display: inline-block;
+		margin-top: 10px;
+		&:last-child {
+			border-right: 1px solid rgba($light-gray, .5);
+		}
+	}
+
+	&:last-child {
+		a {
+			border-right: none;
+		}
+	}
+}
+
+.master-category {
+	@include span-columns(12);
+	border-bottom: 2px solid $light-gray;
+	text-align: center;
+
+	a {
+		&:last-child {
+			border-right: none;
+		}
+	}
+}
+
+
+.partners {
+	@include span-columns(3);
+	text-align: center;
+	margin-top: 30px;
+
+	h2 {
+		text-transform: uppercase;
+		font-size: 14px;
+		text-align: center;
+		color: $light-green;
+		padding-bottom: 30px;
+	}
+
+	a {
+		border-right: 1px solid rgba($light-gray, .5);
+		display: inline-block;
+		width: 100%;
+	}
+
+	&:last-child {
+		a {
+			border-right: none;
 		}
 	}
 
