--- a/app/styles/sections/_speakers.scss
+++ b/app/styles/sections/_speakers.scss
@@ -17,10 +17,11 @@
   margin-top: 100px;
   .speaker-item {
     @include span-columns(6);
-    background: #172838;
+    background-color: #172838;
     @include omega(2n);
     @include calc(width, "50% - 1px");
     min-width: 540px;
+    position: relative;
 
     @include media($mobile) {
       @include span-columns(4);
@@ -43,13 +44,16 @@
         opacity: 0;
         height: 100%;
         width: 100%;
+        background-color: rgba(26, 188, 156, 0.7);
+        background-repeat: no-repeat;
+        background-position: center;
         @include transition(opacity 0.2s ease-in-out);
       }
     }
     .speaker-profile-informations {
       width: 50%;
       float: left;
-      padding: 12px;
+      padding: 16px 12px 12px 25px;
       color: #fff;
       position: relative;
       @include media($mobile) {
@@ -66,6 +70,7 @@
         font-size: 13px;
         color: #1abc9c;
         display: block;
+        text-transform: uppercase;
       }
       .speaker-description {
         font-size: 12px;
@@ -74,13 +79,18 @@
         padding-top: 6px;
         // letter-spacing: 1px;
       }
+    }
 
       .social-links {
         position: absolute;
         top: 180px;
-        left: 12px;
+        left: 25px;
+        li {
+          &.keynote {
+            display: none; // Habilitar quando finalizar o evento.
+          }
+        }
       }
-    }
 
     &:hover {
       .hover-profile-picture {
