--- a/app/styles/sections/_for_whom.scss
+++ b/app/styles/sections/_for_whom.scss
@@ -41,18 +41,30 @@
       font-weight: bold;
       margin-bottom: 45px;
       text-transform: uppercase;
+
     }
     .description {
       text-align: center;
       font-size: 14px;
-      line-height: 16px;
+      line-height: 19px;
+      padding: 0 20px;
     }
     img {
       margin-bottom: 34px;
       display: block;
       margin-left: auto;
       margin-right: auto;
+      position: relative;
     }
+
+    @include transition(all 300ms ease-in-out);
+
+    &:hover {
+      img {
+        opacity: 0.7;
+      }
+    }
+    
   }
 }
 
