--- a/app/styles/sections/_location.scss
+++ b/app/styles/sections/_location.scss
@@ -30,7 +30,7 @@
   .address {
     font-size: 16px;
     line-height: 18px;
-    font-weight: 300;
+    font-weight: 700;
     color: #2c3e50;
     padding-top: 20px;
     text-transform: uppercase;
@@ -38,7 +38,6 @@
       float: left;
       margin-right: 20px;
       margin-top: 4px;
-
     }
   }
   h3 {
@@ -55,10 +54,10 @@
     margin-bottom: 10px;
   }
   .outside-description {
-    color: #ffffff;
+    color: $white;
     font-size: 14px;
-    line-height: 15px;
-    padding-bottom: 20px;
+    line-height: 22px;
+    padding-bottom: 12px;
   }
 
   .hotel-list {
@@ -80,4 +79,3 @@
     }
   }
 }
-
