--- a/app/styles/sections/_register.scss
+++ b/app/styles/sections/_register.scss
@@ -57,8 +57,8 @@
 }
 
 .register-now {
-  background: #1abc9c;
-  color: #fff;
+  @include btn-hover(#1abc9c,#2c3e50);
+  color: $white;
   text-transform: uppercase;
   font-size: 16px;
   font-weight: bold;
@@ -69,4 +69,7 @@
   height: 52px;
   line-height: 52px;
   margin-bottom: 110px;
+  &:hover {
+    color: $white;
+  }
 }
