--- a/app/styles/sections/_schedule.scss
+++ b/app/styles/sections/_schedule.scss
@@ -28,7 +28,6 @@
   @include outer-container;
 }
 
-
 #cd-timeline {
   padding-top: 80px;
 }
@@ -38,10 +37,7 @@
 }
 
 
-
-
-
-
+// Right Side
 
 
 .cd-timeline-block {
@@ -58,17 +54,18 @@
     top: 20%;
     left: 100px;
     z-index: 400;
-    padding: 20px 20px 20px 150px;
+    padding: 30px 20px 20px 165px;
+    height: 134px;
     h2 {
       font-size: 13px;
       color: #2a3d51;
       text-transform: uppercase;
       font-weight: bold;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
     }
     p {
       font-size: 18px;
-      font-weight: 300;
+      font-weight: 400;
       color: #ffffff;
       line-height: 19px;
     }
@@ -100,6 +97,8 @@
 }
 
 
+// Left Side 
+
 .cd-timeline-wrapper:nth-child(even) .cd-timeline-block {
   float: left;
   border-right: #1abc9c 2px solid;
@@ -107,8 +106,9 @@
   .cd-timeline-content {
     right: 100px;
     left: auto;
-    padding: 20px 150px 20px 20px ;
+    padding: 30px 165px 20px 20px ;
     text-align: right;
+    height: 134px;
   }
   .cd-timeline-img {
     right: 10px;
@@ -125,17 +125,14 @@
 }
 
 
-
-
-
 // Custom
+
 .cd-timeline-block-custom {
   width: calc(50% + 1px);
   float: right;
   position: relative;
   height: 100px;
   border-left: #1abc9c 2px solid;
-  // background: red;
   .cd-timeline-circle {
     width: 30px;
     height: 31px;
@@ -214,10 +211,8 @@
 }
 
 
-
-
-
 // Interval
+
 .interval {
   .cd-timeline-block {
     .cd-timeline-content {
@@ -226,10 +221,9 @@
       border-radius: 100px;
       position: absolute;
       width: 90%;
-      // top: -45px;
       left: 55px;
       z-index: 400;
-      padding: 45px 20px;
+      padding: 53px 20px;
       text-align: center;
       font-size: 13px;
       color: #fff;
@@ -242,11 +236,7 @@
     }
   }
 }
-.interval .lt {
-  .cd-timeline-content  {
-    border: 2px solid #f0c514;
-  }
-}
+
 
 .cd-timeline-wrapper.interval:nth-child(even) .cd-timeline-block {
   .cd-timeline-content {
@@ -255,11 +245,10 @@
     border-radius: 100px;
     position: absolute;
     width: 90%;
-    // top: -45px;
     left: auto;
     right: 55px;
     z-index: 400;
-    padding: 45px 20px;
+    padding: 53px 20px;
     text-align: center;
     font-size: 13px;
     color: #fff;
@@ -273,9 +262,12 @@
   }
 }
 
+// Custom Lighting Talks
 
-
-
+.lt .cd-timeline-block .cd-timeline-content, 
+.cd-timeline-wrapper.lt:nth-child(even) .cd-timeline-block .cd-timeline-content {
+  border: 2px solid #f0c514;
+}
 
 
 .cd-timeline-img.is-hidden {
