--- a/app/styles/sections/_for_whom.scss
+++ b/app/styles/sections/_for_whom.scss
@@ -1,4 +1,3 @@
-
 .for-whom {
   position: relative;
   padding-top: 50px;
@@ -22,7 +21,6 @@
 .for-whon-wrapper {
   @include outer-container;
 }
-
 
 .for-whom-list {
   margin-top: 95px;
@@ -55,34 +53,94 @@
       margin-left: auto;
       margin-right: auto;
       position: relative;
-    }
 
-    @include transition(all 300ms ease-in-out);
-
-    &:hover {
-      img {
-        opacity: 0.7;
+        &:hover {
+          -webkit-animation: gravitation 3s infinite ease-in-out; /* Safari 4+ */
+          -moz-animation:    gravitation 3s infinite ease-in-out; /* Fx 5+ */
+          -o-animation:      gravitation 3s infinite ease-in-out; /* Opera 12+ */
+          animation:         gravitation 3s infinite ease-in-out; /* IE 10+, Fx 29+ */
+        
+        @-webkit-keyframes gravitation {
+          0% {
+          -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+          50% {
+          -webkit-transform:translateY(5px); /* prefixo para browsers webkit */
+          -moz-transform:translateY(5px); /* prefixo para browsers gecko */
+          -o-transform:translateY(5px); /* prefixo para opera */
+          transform:translateY(5px);
+          }
+          100% {
+           -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+        }
+        @-moz-keyframes gravitation {
+          0%   {
+          -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+          50% {
+          -webkit-transform:translateY(5px); /* prefixo para browsers webkit */
+          -moz-transform:translateY(5px); /* prefixo para browsers gecko */
+          -o-transform:translateY(5px); /* prefixo para opera */
+          transform:translateY(5px);
+          }
+          100% {
+           -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+        }
+        @-o-keyframes gravitation {
+          0%   {
+          -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+          50% {
+          -webkit-transform:translateY(5px); /* prefixo para browsers webkit */
+          -moz-transform:translateY(5px); /* prefixo para browsers gecko */
+          -o-transform:translateY(5px); /* prefixo para opera */
+          transform:translateY(5px);
+          }
+          100% {
+           -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+        }
+        @keyframes gravitation {
+          0%   {
+          -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+          50% {
+          -webkit-transform:translateY(5px); /* prefixo para browsers webkit */
+          -moz-transform:translateY(5px); /* prefixo para browsers gecko */
+          -o-transform:translateY(5px); /* prefixo para opera */
+          transform:translateY(5px);
+          }
+          100% {
+           -webkit-transform:translateY(0); /* prefixo para browsers webkit */
+          -moz-transform:translateY(0); /* prefixo para browsers gecko */
+          -o-transform:translateY(0); /* prefixo para opera */
+          transform:translateY(0);
+          }
+        }
       }
     }
-    
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
