--- a/app/styles/base/_grid-settings.scss
+++ b/app/styles/base/_grid-settings.scss
@@ -7,9 +7,10 @@
 // $max-width: em(1088);
 
 // Neat Breakpoints
+$large-screen: em(960);
 $medium-screen: em(640);
-$large-screen: em(860);
+$small-screen: em(480);
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
-$mobile: new-breakpoint(max-width 500px 4);
+$large-screen-up: new-breakpoint(max-width $large-screen, 12);
+$medium-screen-up: new-breakpoint(max-width $medium-screen, 4);
+$mobile: new-breakpoint(max-width $small-screen, 6);
