--- a/app/styles/sections/_lightningtalks.scss
+++ b/app/styles/sections/_lightningtalks.scss
@@ -3,6 +3,12 @@
   color: #fff;
   padding-bottom: 90px;
   position: relative;
+
+
+  @include media($mobile) {
+      @include span-columns(6);
+      // display: none;
+  }  
   .bottom-cloud {
     background: url('../images/bottom-clouds.png') center top repeat-x;
     position: absolute;
@@ -22,6 +28,11 @@
     position: relative;
     z-index: 400;
     color: #000;
+
+    @include media($mobile) {
+      // color: $white;
+      padding: 0;
+    }
   }
   .moon-overlay-bg {
     min-width: 1024px;
@@ -30,7 +41,9 @@
     left: 50%;
     margin-left: em(-480);
     padding: 122px 0;
-    // width: 100%;
+    @include media($mobile) {
+      display: none;
+    }
 
   }
   .moon {
@@ -39,6 +52,9 @@
     z-index: 102;
     position: relative;
     width: 100%;
+    @include media($mobile) {
+      background: none;
+    }
   }
   .earth {
     background: url('../images/earth.png') center no-repeat;
@@ -75,6 +91,11 @@
   font-size: 14px;
   text-align: center;
   padding-bottom: 80px;
+  @include media($mobile) {
+      @include span-columns(5);
+      @include shift(.5);
+      color: $white;
+  }
 }
 
 .lt-list {
@@ -88,18 +109,26 @@
     height: 367px;
     padding-top: 140px;
     position: relative;
+
+    @include media($mobile) {
+        @include span-columns(5);
+        @include shift(.5);
+    }
+
     h3 {
       text-align: center;
       font-size: 15px;
       font-weight: bold;
       text-transform: uppercase;
     }
+
     p {
       padding: 0 35px;
       font-size: 14px;
       line-height: 22px;
       text-align: center;
     }
+
     .lt-picture {
       position: absolute;
       top: -30px;
@@ -111,33 +140,6 @@
         width: 100%;
       }
     }
-    .label {
-      background: url('../images/label.png') no-repeat;
-      background-size: 100%;
-      width: 94%;
-      height: 60px;
-      position: absolute;
-      left: 3%;
-      bottom: 40px;
-      line-height: 65px;
-      text-align: center;
-      a {
-        color: $white;
-        text-transform: uppercase;
-        font-size: 16px;
-        font-weight: bold;
-      }
-    }
-    &.confirmed {
-      .label {
-        left: 2%;
-        background: url('../images/label-confirmed.png') no-repeat;
-        color: $white;
-        font-size: 16px;
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-    }
   }
 }
 
@@ -147,11 +149,17 @@
   padding-top: 0;
   margin-top: 90px;
   text-align: center;
+  @include media($mobile) {
+      @include span-columns(5);
+      @include shift(.5);
+      color: $white;
+      margin-top: 45px;
+  }
 }
 
 
 .btn-lt {
-  background-color:  #1ABC9C;
+  background-color: #1ABC9C;
   line-height: 50px;
   display: inline-block;
   text-align: center;
@@ -166,6 +174,11 @@
   text-transform: uppercase;
   color: $white;
   font-weight: bold;
+  @include media($mobile) {
+    top: -10px;
+    left: 12px;
+    width: 305px;
+  }
 
   a {
     text-transform: uppercase;
