--- a/app/styles/sections/_ovini.scss
+++ b/app/styles/sections/_ovini.scss
@@ -15,8 +15,28 @@
   overflow: hidden;
   .rockets {
     position: absolute;
-    right: 450px;
-    top: 840px;
+    width: 200px;
+    height: 200px;
+    img {
+      position: absolute;
+      z-index: 190;
+      left: 0;
+    }
+    .rocket1 {
+      left: 80px;
+      top: 80px;
+    }
+    .rocket2 {
+      left: 180px;
+      top: -107px
+    }
+    .rocket3 {
+      left: -40px;
+      top: -10px;
+
+    }
+    right: 650px;
+    top: 904px;
     z-index: 200;
   }
 }
@@ -65,8 +85,8 @@
     width: 682px;
     height: 558px;
     position: absolute;
-    top: 120px;
-    left: -240px;
+    top: 126px;
+    left: -238px;
     opacity: 0;
   }
 }
